# ASL-Translator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  train_model.ipynb
asl_model/: .gitignore  baseline_model.h5  baseline_model.h5.dvc
dataset/: .gitignore  landmarks.csv.dvc  test.dvc
src/: get_data.py  main.py  model.ipynb  track.py
